--- a/testrecorder/media/testrecorder/toolbar.css
+++ b/testrecorder/media/testrecorder/toolbar.css
@@ -260,7 +260,9 @@
 	display:block;
 	margin-top:0.8em;
 	overflow: auto;
+	width: 100%;
 }
+
 #djDebug .panelContent tbody td,
 #djDebug .panelContent tbody th {
 	vertical-align:top;
@@ -438,3 +440,8 @@
 #djDebug .highlight .nv { color:#333 } /* Name.Variable */
 #djDebug .highlight .s2 { color:#333 } /* Literal.String.Double */
 #djDebug .highlight .cp { color:#333 } /* Comment.Preproc */
+
+span.VarName {
+	font-weight: bolder;
+	
+}
