--- a/testrecorder/templates/testrecorder/panels/function_name.html
+++ b/testrecorder/templates/testrecorder/panels/function_name.html
@@ -1,11 +1,11 @@
-<input type='text' id='testcase-function-name' value='{{ function_name }}'/>
-<button id='set-testcase-function-name'>Set</button>
+<input type='text' id='testcase-function-name' value='test_'/>
+<button id='set-testcase-function-name'>Add</button>
 <script type='text/javascript'>
 	jQuery(function($j){
 		$j('#set-testcase-function-name').click(function(){
 			var value = $j('#testcase-function-name').val();
 			if (value) {
-				$j.post('{{ BASE_URL }}/function_name/',
+				$j.post('{{ BASE_URL }}/create_function/',
 						{'name': value},
 						function(data, textStatus){
 							alert(textStatus);
