--- a/testrecorder/templates/testrecorder/base.html
+++ b/testrecorder/templates/testrecorder/base.html
@@ -20,8 +20,8 @@
 	<div style="display:none;" id="djDebugToolbar">
 		<ul id="djDebugPanelList">
 			<li><a id="djHideToolBarButton" href="#" title="Hide Toolbar">{% trans "Hide" %} &raquo;</a></li>
-			<li><a class="jsStopRecord" href="{{ BASE_URL }}/stop/" {% if not start %}style="display: none"{% endif %} title="Stop Record">{% trans "Stop" %}</a></li>
-			<li><a class="jsStartRecord" href="{{ BASE_URL }}/start/" {% if start %}style="display: none"{% endif %} title="Start Record">{% trans "Start" %}</a></li>
+			<li><a class="jsStopRecord" href="{{ BASE_URL }}/stop/" {% if not start %}style="display: none"{% endif %} title="Stop Record"><span class="stop">{% trans "Stop" %}</span></a></li>
+			<li><a class="jsStartRecord" href="{{ BASE_URL }}/start/" {% if start %}style="display: none"{% endif %} title="Start Record"><span>{% trans "Start" %}</span></a></li>
 			{% for panel in panels %}
 				<li>
 					{% if panel.has_content %}
