--- a/testrecorder/templates/testrecorder/panels/record.html
+++ b/testrecorder/templates/testrecorder/panels/record.html
@@ -12,7 +12,7 @@
 	</thead>
 	{% for row in records %}
 		<tr class="djFunctionRow">
-			<td colspan="6">{{ row.name }}</td>
+			<td colspan="6"><b class="djEdit" id="row_{{ forloop.counter0 }}">{{ row.name }}</b></td>
 			<td><a class="djDeleteRequest" href="{{ BASE_URL }}/func_delete/?index={{ forloop.counter0 }}">delete</a></td>
 		</tr>
 		{% for item in row.records %}
