--- a/testrecorder/media/testrecorder/toolbar.css
+++ b/testrecorder/media/testrecorder/toolbar.css
@@ -22,12 +22,23 @@
 	text-align:left;
 }
 
+#djDebug #djInitWindow {
+	background:#111;
+	width:250px;
+	z-index:100000000;
+	position:fixed;
+	top:150px;
+	left: 30%;
+	opacity:0.9;
+	padding: 5px;
+	color: #fff;
+}
 #djDebug #djTestCaseCodeArea {
 	width: 600px;
 	height: 500px;
 }
 
-#djDebug #djDebugToolbar {
+#djDebug #djDebugToolbar{
 	background:#111;
 	width:200px;
 	z-index:100000000;
