fix url parameter order

--- a/testrecorder/templates/testrecorder/_init.html
+++ b/testrecorder/templates/testrecorder/_init.html
@@ -7,7 +7,7 @@
 				</tr>
 			    <tr>
 			    	<td style="color: #fff">Function name:</td>
-					<td><input type="text" id="djInitFunctionNameInput"/></td>
+					<td><input type="text" id="djInitFunctionNameInput" value="test_"/></td>
 				</tr>
 			</table>
 			<button id="djInitButton">Start</button>
