--- a/testrecorder/templates/testrecorder/panels/record.html
+++ b/testrecorder/templates/testrecorder/panels/record.html
@@ -8,6 +8,7 @@
 			<th>Code</th>
 			<th>Redirect url</th>
 			<th>&nbsp</th>
+			<th>&nbsp</th>
 		</tr>
 	</thead>
 	{% for row in records %}
@@ -32,6 +33,7 @@
 				<td>{{ item.code }}</td>
 				<td>{{ item.redirect_url }}</td>
 				<td><a class="djDeleteRequest" href="{{ BASE_URL }}/delete/?func_index={{ forloop.parentloop.counter0 }}&index={{ forloop.counter0 }}">delete</a></td>
+				<td><a class="djAddAssertion" href="{{ BASE_URL }}/assertion/?func_index={{ forloop.parentloop.counter0 }}&index={{ forloop.counter0 }}">add assertion</a></td>
 			</tr>
 		{% endfor %}
 	{% endfor %}	
