--- a/testrecorder/templates/testrecorder/base.html
+++ b/testrecorder/templates/testrecorder/base.html
@@ -4,7 +4,7 @@
 	// '$' variable, so store a reference of it in a temporary variable...
 	var _$ = window.$;
 	if (typeof jQuery == 'undefined') {
-		var jquery_url = '{{ BASE_URL }}/m/jquery.js';
+		var jquery_url = '{{ BASE_URL }}/m/jquery-1.4.2.min.js';
 		document.write(unescape('%3Cscript src="' + jquery_url + '" type="text/javascript"%3E%3C/script%3E'));
 		var jquery_edit_url = '{{ BASE_URL }}/m/jquery.jeditable.mini.js';
 		document.write(unescape('%3Cscript src="' + jquery_edit_url + '" type="text/javascript"%3E%3C/script%3E'));
@@ -13,7 +13,8 @@
 		var jquery_edit_url = '{{ BASE_URL }}/m/jquery.jeditable.mini.js';
 		document.write(unescape('%3Cscript src="' + jquery_edit_url + '" type="text/javascript"%3E%3C/script%3E'));
 	}
-	var djRecToolbarBASE_URL = '{{ BASE_URL }}';
+    var djRecToolbar = {};
+	djRecToolbar.BASE_URL = '{{ BASE_URL }}';
 </script>
 <script type="text/javascript" src="{{ BASE_URL }}/m/toolbar.js"></script>
 <script type="text/javascript" charset="utf-8">
