add jquery css frameworkfor future and base of fixtures panel

--- a/testrecorder/templates/testrecorder/panels/function_name.html
+++ b/testrecorder/templates/testrecorder/panels/function_name.html
@@ -1,3 +1,8 @@
+<div class="ui-state-error ui-corner-all">
+    <span class="ui-icon ui-icon-alert"></span>
+    Database will be reloaded after you add new fucntion!<br/>
+    Maybe you want save fixstures at first?
+</div>
 <input type='text' id='testcase-function-name' value='test_'/>
 <button id='set-testcase-function-name'>Add</button>
 <script type='text/javascript'>
