update stylesheet, update fixture panel template

--- a/testrecorder/templates/testrecorder/base.html
+++ b/testrecorder/templates/testrecorder/base.html
@@ -23,8 +23,9 @@
 </script>
 <style type="text/css">
 	@import url({{ BASE_URL }}/m/toolbar.css);
+    @import url({{ BASE_URL }}/m/jquery-ui-1.8.4.custom.css);
 </style>
-<div id="djDebug">
+<div id="djDebug" class="djDebug">
 	<div style="display:none;" id="djDebugToolbar">
 		<ul id="djDebugPanelList">
 			<li><a id="djHideToolBarButton" href="#" title="Hide Toolbar">{% trans "Hide" %} &raquo;</a></li>
