--- a/tests/project/templates/base.html
+++ b/tests/project/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <title>TestRecorder</title>
+      <title>{% block title %}TestRecorder{% endblock %}</title>
       <meta charset="utf-8" />
       {% block head %}{% endblock %}
     </head>
