fix problem with logout, https://github.com/pydevua/django-testrecorder/issues#issue/20

--- a/tests/project/templates/base.html
+++ b/tests/project/templates/base.html
@@ -6,6 +6,11 @@
       {% block head %}{% endblock %}
     </head>
     <body>
+       <div>
+           {% if user.is_authenticated %}
+           {{ user }} | <a href="{% url logout %}?next={{ request.path_info|urlencode }}">Logout</a>
+           {% endif %}
+       </div>
        {% block body %}{% endblock %} 
     </body>
 </html>
