--- a/tests/project/templates/base.html
+++ b/tests/project/templates/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,8 +9,12 @@
     <body>
        <div>
            {% if user.is_authenticated %}
-           {{ user }} | <a href="{% url logout %}?next={{ request.path_info|urlencode }}">Logout</a>
+                {{ user }} | <a href="{% url logout %}?next={{ request.path_info|urlencode }}">{% trans "Logout" %}</a> |
+           {% else %}
+                <a href="{% url login%}?next={{ request.path_info|urlencode }}">{% trans "Login" %}</a> |
            {% endif %}
+           <a href="{% url main:index %}">{% trans "Main" %}</a> |
+           <a href="{% url main:create %}">{% trans "Create" %}</a>
        </div>
        {% block body %}{% endblock %} 
     </body>
