Edited testrecorder/templates/testrecorder/panels/assertion.html via GitHub

--- a/testrecorder/templates/testrecorder/panels/assertion.html
+++ b/testrecorder/templates/testrecorder/panels/assertion.html
@@ -3,7 +3,7 @@
     Select assertion, fix if you need. Assertion will be added to selected or current request.<br/>
     Really you can add anything to test.<br/>
     <a target="blank" href="http://docs.djangoproject.com/en/dev/topics/testing/#assertions">
-        Learn more about Django's specific asserions
+        Learn more about Django's specific assertions
     </a>
 </div>
 <input type='text' id='assertion-input' value='' size='100'/>
