Small wording and spelling updates

--- a/testrecorder/templates/testrecorder/_init.html
+++ b/testrecorder/templates/testrecorder/_init.html
@@ -1,5 +1,5 @@
 		<div id="djInitWindow">
-            <h3 style="color: #fff">Fill to start</h3>
+            <h4 style="color: #fff">Complete the following to start the session</h4>
             <table>
                 <tr>
                     <td style="color: #fff">Class name:</td>
