--- a/testrecorder/templates/testrecorder/panels/function_name.html
+++ b/testrecorder/templates/testrecorder/panels/function_name.html
@@ -1,7 +1,7 @@
 <div class="ui-state-error ui-corner-all">
     <span class="ui-icon ui-icon-alert"></span>
     Database will be reloaded after you add new fucntion!<br/>
-    Maybe you want save fixstures at first?
+    Maybe you want save fixtures first?
 </div>
 <input type='text' id='testcase-function-name' value='test_'/>
 <button id='set-testcase-function-name'>Add</button>
